<resources>
    <string name="app_name">Decider Game</string>
    <string name="score_hint">Score</string>
    <string name="start_game">Start game</string>
    <string name="stop_game">Stop game</string>
    <string name="game_over">GAME OVER</string>
    <string name="seconds">seconds</string>
    <string name="moves">moves</string>
    <string name="score_peak">score peak</string>
    <string name="close">Close</string>
    <string name="order_by">Order by</string>
    <string name="game_time">Game Time</string>
    <string name="num_moves">Num Moves</string>
    <string name="ranking">Ranking</string>
</resources>