<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tv_result_margin"
        android:layout_marginStart="@dimen/tv_result_margin"
        android:text="@string/order_by"
        android:textSize="@dimen/tv_result_handler_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggle_btn_ranking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_ranking_margin_top"
        android:layout_marginEnd="@dimen/btn_ranking_margin_end"
        app:singleSelection="true"
        app:selectionRequired="true"
        app:checkedButton="@id/btn_ranking_game_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ranking_game_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_time"
            android:textSize="@dimen/btn_ranking_text_size"
            style="?attr/materialButtonOutlinedStyle"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ranking_num_moves"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_moves"
            android:textSize="@dimen/btn_ranking_text_size"
            style="?attr/materialButtonOutlinedStyle"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ranking_score_peak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_peak"
            android:textSize="@dimen/btn_ranking_text_size"
            style="?attr/materialButtonOutlinedStyle"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ranking_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/ranking_list_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggle_btn_ranking" />
</androidx.constraintlayout.widget.ConstraintLayout>