<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@color/pink_600"
        android:gravity="center"
        android:text="@string/game_over"
        android:textColor="@color/white"
        android:textSize="@dimen/header_gameover"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_game_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tv_header"
        android:layout_marginStart="@dimen/tv_result_margin"
        android:layout_marginTop="@dimen/tv_result_margin"
        tools:text="15.6"
        android:textSize="@dimen/tv_result_text_size"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/tv_game_time"
        android:layout_alignBottom="@id/tv_game_time"
        android:layout_marginStart="@dimen/tv_result_text_margin"
        android:text="@string/seconds"
        android:textSize="@dimen/tv_result_handler_text_size"/>

    <TextView
        android:id="@+id/tv_num_moves"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_game_time"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/tv_result_margin"
        android:layout_marginTop="@dimen/tv_result_margin"
        android:textSize="@dimen/tv_result_text_size"
        android:textStyle="bold"
        tools:text="20" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/tv_num_moves"
        android:layout_toEndOf="@id/tv_num_moves"
        android:layout_marginStart="@dimen/tv_result_text_margin"
        android:text="@string/moves"
        android:textSize="@dimen/tv_result_handler_text_size" />

    <TextView
        android:id="@+id/tv_score_peak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_num_moves"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/tv_result_margin"
        android:layout_marginTop="@dimen/tv_result_margin"
        android:layout_marginBottom="@dimen/tv_result_margin"
        android:textSize="@dimen/tv_result_text_size"
        android:textStyle="bold"
        tools:text="150" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/tv_score_peak"
        android:layout_toEndOf="@id/tv_score_peak"
        android:layout_marginStart="@dimen/tv_result_text_margin"
        android:text="@string/score_peak"
        android:textSize="@dimen/tv_result_handler_text_size" />

</RelativeLayout>